--- a/site.html
+++ b/site.html
@@ -8,5 +8,6 @@
       <input type="password" name="auth_pass" placeholder="Введите пароль" required >
       <button class="form_auth_button" type="submit" name="form_auth_submit">Войти</button>
     </form>
+    <link rel="stylesheet" href="styles.css">
   </div>
 </div>
